--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -19,6 +19,12 @@ add_library( # Sets the name of the library.
              # Provides a relative path to your source file(s).
              src/main/cpp/native-lib.cpp )
 
+add_library( lib_opencv SHARED IMPORTED )
+
+set_target_properties( lib_opencv PROPERTIES IMPORTED_LOCATION D:/Paul/Documents/Programming/Android/SDK_tesseract/app/src/main/jniLibs/${ANDROID_ABI}/libopencv_java3.so )
+
+include_directories( D:/Programs/Android/OpenCV_3.2.0/sdk/native/jni/include )
+
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
 # default, you only need to specify the name of the public NDK library
@@ -38,6 +44,8 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
                        native-lib
+
+                       lib_opencv
 
                        # Links the target library to the log library
                        # included in the NDK.
